--- a/Chi/aboutus.html
+++ b/Chi/aboutus.html
@@ -47,14 +47,65 @@
     </div>
 
     <!-- Staff -->
-    <div class="banner-staff section">
+    <div class="banner-staff">
         <div class="banner-staff-text">
-
+            <h1 class="banner-staff-text-header">Our Staff</h1>
+            <p class="banner-staff-text-container">
+                LOREM IPSUM DOLOR SIT AMET, CONSECTETURADIPISCING ELIT. DONEC AT LIGULA IN LIGULA ULTRICESVULPUTATE AT AC SAPIEN. IN JUSTO NEQUE, MALESUADAA LIBERO ET, LOREM IPSUM DOLOR SIT AMET,CONSECTETUR ADIPISCING ELIT
+            </p>
+            <a class="banner-staff-text-btn" href="#">CONTACT US</a>
+        </div>
+        <div class="staff">
+            <div class="staff-info">
+                <img src="./images/staff-1.jpeg" alt="" class="staff-img">
+                <div class="staff-info-detail">
+                    <h2 class="staff-name"><strong>Jane Mcallister</strong></h2>
+                    <h6 class="staff-pos">OWNER</h6>
+                    <p class="staff-quote">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
+                    </p>
+                    <a href="#" class="staff-contact">CONTACT ME</a>
+                </div>
+            </div>
+            <div class="staff-info">
+                <img src="./images/staff-2.jpeg" alt="" class="staff-img">
+                <div class="staff-info-detail">
+                    <h2 class="staff-name"><strong>Mandy Johnson</strong></h2>
+                    <h6 class="staff-pos">CUSTOMER CARE</h6>
+                    <p class="staff-quote">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
+                    </p>
+                    <a href="#" class="staff-contact">CONTACT ME</a>
+                </div>
+            </div>        
+            <div class="staff-info">
+                <img src="./images/staff-3.jpeg" alt="" class="staff-img">
+                <div class="staff-info-detail">
+                    <h2 class="staff-name"><strong>Elly Spitch</strong></h2>
+                    <h6 class="staff-pos">CO-FOUNDER</h6>
+                    <p class="staff-quote">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
+                    </p>
+                    <a href="#" class="staff-contact">CONTACT ME</a>
+                </div>
+            </div>  
+            <div class="staff-info">
+                <img src="./images/staff-4.jpeg" alt="" class="staff-img">
+                <div class="staff-info-detail">
+                    <h2 class="staff-name"><strong>Hanna Zafron</strong></h2>
+                    <h6 class="staff-pos">SPECIALIST</h6>
+                    <p class="staff-quote">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
+                    </p>
+                    <a href="#" class="staff-contact">CONTACT ME</a>
+                </div>
+            </div>
         </div>
     </div>
-
     <!-- Destinations -->
-
+    <div>
+        
+    </div>
 
     <!-- Status -->
 </body>
