--- a/Chi/aboutus.html
+++ b/Chi/aboutus.html
@@ -102,11 +102,212 @@
             </div>
         </div>
     </div>
+
     <!-- Destinations -->
-    <div>
-        
+    <div class="destinations">
+        <div class="des-header">
+            <h3 class="des-header-1">
+                PROMOTIONS
+            </h3>
+            <h2 class="des-header-2">
+                OUR <u>DESTINATIONS</u> 
+            </h2>
+        </div>
+        <div class="des-container">
+            <div class="des-container-col">
+                <div class="des-container-section">
+                    <div class="des-container-row-1">
+                        <div class="des-container-row-1-left">
+                            HAWAII TOURS
+                        </div>
+                        <div class="des-container-row-1-right">
+                            $ 50,80
+                        </div>
+                    </div>
+                    <div class="des-container-row-2">
+                        <div class="des-container-row-2-left">
+                            Lorem ipsum dolor sit amet
+                        </div>
+                        <div class="des-container-row-2-right">
+                            NEW
+                        </div>
+                    </div>
+                </div>
+                <div class="des-container-section">
+                    <div class="des-container-row-1">
+                        <div class="des-container-row-1-left">
+                            SAN FRANCISCO
+                        </div>
+                        <div class="des-container-row-1-right">
+                            $ 29,80
+                        </div>
+                    </div>
+                    <div class="des-container-row-2">
+                        <div class="des-container-row-2-left">
+                            Lorem ipsum dolor sit amet
+                        </div>
+                        <div class="des-container-row-2-right" style="background-color: #f76570;">
+                            NEW
+                        </div>
+                    </div>
+                </div>
+                <div class="des-container-section">
+                    <div class="des-container-row-1">
+                        <div class="des-container-row-1-left">
+                            TUSCANY
+                        </div>
+                        <div class="des-container-row-1-right">
+                            $ 70,30
+                        </div>
+                    </div>
+                    <div class="des-container-row-2">
+                        <div class="des-container-row-2-left">
+                            Lorem ipsum dolor sit amet
+                        </div>
+                        <div class="des-container-row-2-right one-hour">
+                            1 HOUR
+                        </div>
+                    </div>
+                </div>
+                <div class="des-container-section">
+                    <div class="des-container-row-1">
+                        <div class="des-container-row-1-left">
+                            ITALY COST
+                        </div>
+                        <div class="des-container-row-1-right">
+                            $ 50,80
+                        </div>
+                    </div>
+                    <div class="des-container-row-2">
+                        <div class="des-container-row-2-left">
+                            Lorem ipsum dolor sit amet
+                        </div>
+                        <div class="des-container-row-2-right one-hour">
+                            1 HOUR
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="des-container-col">
+                <div class="des-container-section">
+                    <div class="des-container-row-1">
+                        <div class="des-container-row-1-left" >
+                            OCEANIA
+                        </div>
+                        <div class="des-container-row-1-right">
+                            $ 23,45
+                        </div>
+                    </div>
+                    <div class="des-container-row-2">
+                        <div class="des-container-row-2-left">
+                            Lorem ipsum dolor sit amet
+                        </div>
+                        <div class="des-container-row-2-right" style="background-color: #f76570;">
+                            NEW
+                        </div>
+                    </div>
+                </div>
+                <div class="des-container-section">
+                    <div class="des-container-row-1">
+                        <div class="des-container-row-1-left">
+                            LAS VEGAS TOUR
+                        </div>
+                        <div class="des-container-row-1-right">
+                            $ 50,80
+                        </div>
+                    </div>
+                    <div class="des-container-row-2">
+                        <div class="des-container-row-2-left">
+                            Lorem ipsum dolor sit amet
+                        </div>
+                        <div class="des-container-row-2-right">
+                            NEW
+                        </div>
+                    </div>
+                </div>
+                <div class="des-container-section">
+                    <div class="des-container-row-1">
+                        <div class="des-container-row-1-left">
+                            BRAZIL
+                        </div>
+                        <div class="des-container-row-1-right">
+                            $ 32,00
+                        </div>
+                    </div>
+                    <div class="des-container-row-2">
+                        <div class="des-container-row-2-left">
+                            Lorem ipsum dolor sit amet
+                        </div>
+                        <div class="des-container-row-2-right one-hour">
+                            1 HOUR
+                        </div>
+                    </div>
+                </div>
+                <div class="des-container-section">
+                    <div class="des-container-row-1">
+                        <div class="des-container-row-1-left">
+                            NORTH AMERICA
+                        </div>
+                        <div class="des-container-row-1-right">
+                            $ 43,00
+                        </div>
+                    </div>
+                    <div class="des-container-row-2">
+                        <div class="des-container-row-2-left">
+                            Lorem ipsum dolor sit amet
+                        </div>
+                        <div class="des-container-row-2-right" style="background-color: #ffd205;">
+                            NEW
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Status -->
+    <div class="status">
+        <div class="status-detail">
+            <div class="status-detail-num">
+                12
+            </div>
+            <div class="status-detail-name">
+                <p>DESTINATIONS</p>
+            </div>
+        </div>
+        <div class="status-detail">
+            <div class="status-detail-num">
+                82
+            </div>
+            <div class="status-detail-name">
+                <p>PACKAGES</p> 
+            </div>
+        </div>
+        <div class="status-detail">
+            <div class="status-detail-num">
+                62
+            </div>
+            <div class="status-detail-name">
+                <p>STAFF MEMBERS</p>
+            </div>
+        </div>
+        <div class="status-detail">
+            <div class="status-detail-num">
+                18
+            </div>
+            <div class="status-detail-name">
+                <p>YEARS OF EXPERIENCE</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Sticky -->
+    <div class="buy">
+        <span class="buynow">BUY NOW</span>
+        <a href="#" class="circle">
+            <span class="">$</span>
+            <span>54</span>
+        </a>
+    </div>
 </body>
 </html>
