--- a/Chi/aboutus.html
+++ b/Chi/aboutus.html
@@ -301,12 +301,17 @@
         </div>
     </div>
 
-    <!-- Sticky -->
+    <!-- Fixed -->
     <div class="buy">
         <span class="buynow">BUY NOW</span>
         <a href="#" class="circle">
-            <span class="">$</span>
-            <span>54</span>
+            <span class="up">$</span>
+            <span class="num">54</span>
+        </a>
+    </div>
+    <div class="leaf">
+        <a href="#" class="circle-leaf">
+            <img class="leaf-img" src="./images/leaf.png" style="width: 15px;">
         </a>
     </div>
 </body>
