--- a/Chi/aboutus.html
+++ b/Chi/aboutus.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Banner -->
+    <!-- BANNER -->
     <div class="banner">
         <h1 class="banner-text">About Us</h1>
     </div>
 
-    <!-- Introduce -->
+    <!-- INTRODUCE -->
     <div class="intro">
         <div class="intro-left">
             Hello. Our agency has been present for over 20 years in the market. We make the most of all our customers.
@@ -41,12 +41,12 @@
         </div>
     </div>
 
-    <!-- Video -->
+    <!-- VIDEO -->
     <div class="video">
         <iframe src="https://www.youtube.com/embed/UM1O-4ll-vU" width="800" height="500" allowfullscreen></iframe>
     </div>
 
-    <!-- Staff -->
+    <!-- STAFF -->
     <div class="banner-staff">
         <div class="banner-staff-text">
             <h1 class="banner-staff-text-header">Our Staff</h1>
@@ -103,7 +103,7 @@
         </div>
     </div>
 
-    <!-- Destinations -->
+    <!-- DESTINATIONS -->
     <div class="destinations">
         <div class="des-header">
             <h3 class="des-header-1">
@@ -265,7 +265,7 @@
         </div>
     </div>
 
-    <!-- Status -->
+    <!-- STATUS -->
     <div class="status">
         <div class="status-detail">
             <div class="status-detail-num">
@@ -301,7 +301,7 @@
         </div>
     </div>
 
-    <!-- Fixed -->
+    <!-- FIXED -->
     <div class="buy">
         <span class="buynow">BUY NOW</span>
         <a href="#" class="circle">
