--- a/Thang/base.html
+++ b/Thang/base.html
@@ -39,9 +39,9 @@
             ></label>
             <label for="show-menu" class="nav_overlay"></label>
             <ul class="links">
-              <li><a class="active" href="#">HOME</a></li>
+              <li><a class="active" href="../Thang/index.html">HOME</a></li>
               <li class="hover_sub1">
-                <a href="#" class="desktop-link">PACKAGE</a>
+                <a href="./Viet/package.html" class="desktop-link">PACKAGE</a>
                 <input type="checkbox" id="show-package" />
                 <label for="show-package">PACKAGE</label>
                 <ul class="sub_nav">
@@ -71,7 +71,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" class="desktop-link">SHOP</a>
+                <a href="../Viet/shop.html" class="desktop-link">SHOP</a>
                 <input type="checkbox" id="show-shop" />
                 <label for="show-shop">SHOP</label>
                 <ul class="sub_nav">
@@ -82,7 +82,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" class="desktop-link">ABOUT US</a>
+                <a href="../Chi/aboutus.html" class="desktop-link">ABOUT US</a>
                 <input type="checkbox" id="show-about" />
                 <label for="show-about">ABOUT US</label>
                 <ul class="sub_nav">
@@ -95,7 +95,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" class="desktop-link">NEWS</a>
+                <a href="../Chi/news.html" class="desktop-link">NEWS</a>
                 <input type="checkbox" id="show-news" />
                 <label for="show-news">NEWS</label>
                 <ul class="sub_nav">
@@ -115,7 +115,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" class="desktop-link">CONTACT</a>
+                <a href="./Chi/contact.html" class="desktop-link">CONTACT</a>
                 <input type="checkbox" id="show-contact" />
                 <label for="show-contact">CONTACT</label>
                 <ul class="sub_nav">
