add package + shop

--- a/Viet/shop.html
+++ b/Viet/shop.html
@@ -11,7 +11,7 @@
   <title>Products-City Tours</title>
 </head>
 <body>
-  <div class="shop-section" style="background: url('img/para-11.jpg') top center / cover no-repeat;">
+  <div class="shop-section" style="background: url('img/img-shop/para-11.jpg') top center / cover no-repeat;">
     <div class="mask"></div>
     <h1>Shop</h1>
   </div>
