--- a/Chi/aboutus.html
+++ b/Chi/aboutus.html
@@ -313,7 +313,7 @@
     </div>
     <div class="leaf">
         <a href="https://1.envato.market/PZ42q" target="_blank" class="circle-leaf">
-            <img class="leaf-img" src="./images/leaf.png" style="width: 15px;">
+            <img class="leaf-img" src="../Chi/images/leaf.png" style="width: 15px;">
         </a>
     </div>
 </body>
