--- a/Thang/index.html
+++ b/Thang/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="../Thang/style/base.css" />
-    <link rel="stylesheet" href="../Thang/style/index.css" />
+    <link rel="stylesheet" href="../Thang/style/base.css">
+    <!-- <link rel="stylesheet" href="../Thang/style/index.css" /> -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,9 +28,7 @@
   </head>
   <body>
     <div class="container1">
-
-      <!-- ----------HEADER---------- -->
-
+      <!-- ----------HEADER START---------- -->
       <div class="header">
         <div class="header_nav">
           <div class="header_content">
@@ -41,9 +39,9 @@
             ></label>
             <label for="show-menu" class="nav_overlay"></label>
             <ul class="links">
-              <li><a class="active" href="#">HOME</a></li>
+              <li><a class="active" href="../Thang/index.html">HOME</a></li>
               <li class="hover_sub1">
-                <a href="#" class="desktop-link">PACKAGE</a>
+                <a href="../Viet/package.html" class="desktop-link">PACKAGE</a>
                 <input type="checkbox" id="show-package" />
                 <label for="show-package">PACKAGE</label>
                 <ul class="sub_nav">
@@ -73,7 +71,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" class="desktop-link">SHOP</a>
+                <a href="../Viet/shop.html" class="desktop-link">SHOP</a>
                 <input type="checkbox" id="show-shop" />
                 <label for="show-shop">SHOP</label>
                 <ul class="sub_nav">
@@ -84,7 +82,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" class="desktop-link">ABOUT US</a>
+                <a href="../Chi/aboutus.html" class="desktop-link">ABOUT US</a>
                 <input type="checkbox" id="show-about" />
                 <label for="show-about">ABOUT US</label>
                 <ul class="sub_nav">
@@ -97,7 +95,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" class="desktop-link">NEWS</a>
+                <a href="../Chi/news.html" class="desktop-link">NEWS</a>
                 <input type="checkbox" id="show-news" />
                 <label for="show-news">NEWS</label>
                 <ul class="sub_nav">
@@ -117,7 +115,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" class="desktop-link">CONTACT</a>
+                <a href="../Chi/contact.html" class="desktop-link">CONTACT</a>
                 <input type="checkbox" id="show-contact" />
                 <label for="show-contact">CONTACT</label>
                 <ul class="sub_nav">
@@ -130,11 +128,195 @@
           </div>
         </div>
       </div>
+      <!-- ----------HEADER END---------- -->
+
+
+      <!-- <div class="sliderr">
+
+        <div class="row">
+          <div class="header_slide col-12">
+            <div
+              id="carouselExampleInterval"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="7000">
+                  <img
+                    src="./images/slide_1.jpg"
+                    class="d-block w-100"
+                    alt="slide1"
+                  />
+                </div>
+                <div class="carousel-item" data-bs-interval="7000">
+                  <img
+                    src="./images/slide_2.jpg"
+                    class="d-block w-100"
+                    alt="slide2"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="header_content">
+          <p class="title">Enjoy<span> Your </span>Holiday</p>
+          <p class="title2">With<span> Our </span>Agency</p>
+          <div class="list"></div>
+          <a href="#" class="buy">BUY A LICENSE</a>
+          <p class="price">$25</p>
+        </div>
+      </div> -->
 
       <!-- ----------CONTENT---------- -->
 
+      <!-- <div class="content">
+        <div class="content_experience">
+          <div class="row">
+            <div class="exp_left col-12 col-lg-8 col-md-12 col-sm-12">
+              <p class="walk">WALK TOUR AND SUGWAY</p>
+              <h2 class="title">The Paris <span>Experience</span> !</h2>
+              <div class="exp_left_text">
+                <div class="row">
+                  <p class="text col-12 col-lg-6">
+                    Lorem ipsum dolor sit amet, consect etur adip iscing elit.
+                    Proin rhoncus urn a dictum neque molestie ultricies.
+                  </p>
+                  <p class="text col-12 col-lg-6">
+                    Lorem ipsum dolor sit amet, consect etur adip iscing elit.
+                    Proin rhoncus urn a dictum neque molestie ultricies.
+                  </p>
+                </div>
+              </div>
+              <a href="./news.html">VIEW ALL PACKAGES</a>
+            </div>
+            <div class="exp_right col-12 col-lg-4 col-md-12 col-sm-12">
+              <img src="./images/exp.jpg" alt="exp" />
+              <a
+                href="https://www.youtube.com/watch?v=UM1O-4ll-vU&feature=emb_logo"
+                ><img width="80px" src="./images/icon-play.png" alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="for_item">
+            <div class="item">
+              <a href="#"><img src="../Thang/images/exp1.jpg" alt="exp" /></a>
+              <p class="price price1">700$</p>
+            </div>
+            <div class="item">
+              <a href="#"><img src="../Thang/images/exp2.jpg" alt="exp" /></a>
+              <p class="price price2">500$</p>
+            </div>
+            <div class="item">
+              <a href="#"><img src="./images/exp3.jpg" alt="exp" /></a>
+              <p class="price price3">400$</p>
+            </div>
+            <div class="item">
+              <a href="#"><img src="./images/exp4.jpg" alt="exp" /></a>
+              <p class="price price4">1200$</p>
+            </div>
+          </div>
+        </div>
+        <div class="content_services">
+          <p class="multiple">MULTIPLE BENEFITS INCLUDED</p>
+          <h2 class="title">OUR <span>SERVICES</span></h2>
+          <div class="row">
+            <div class="services_item col-12 col-lg-4">
+              <div class="item_left"></div>
+              <div class="item_right">
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet conse ctetur adip iscing elit Proin
+                  rhonc us urna dictum.
+                </p>
+                <a href="#">View More</a>
+              </div>
+            </div>
+            <div class="services_item col-12 col-lg-4">
+              <div class="item_left"></div>
+              <div class="item_right">
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet conse ctetur adip iscing elit Proin
+                  rhonc us urna dictum.
+                </p>
+                <a href="#">View More</a>
+              </div>
+            </div>
+            <div class="services_item col-12 col-lg-4">
+              <div class="item_left"></div>
+              <div class="item_right">
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet conse ctetur adip iscing elit Proin
+                  rhonc us urna dictum.
+                </p>
+                <a href="#">View More</a>
+              </div>
+            </div>
+            <div class="services_item col-12 col-lg-4">
+              <div class="item_left"></div>
+              <div class="item_right">
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet conse ctetur adip iscing elit Proin
+                  rhonc us urna dictum.
+                </p>
+                <a href="#">View More</a>
+              </div>
+            </div>
+            <div class="services_item col-12 col-lg-4">
+              <div class="item_left"></div>
+              <div class="item_right">
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet conse ctetur adip iscing elit Proin
+                  rhonc us urna dictum.
+                </p>
+                <a href="#">View More</a>
+              </div>
+            </div>
+            <div class="services_item col-12 col-lg-4">
+              <div class="item_left"></div>
+              <div class="item_right">
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet conse ctetur adip iscing elit Proin
+                  rhonc us urna dictum.
+                </p>
+                <a href="#">View More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content_sale"></div>
+      </div> -->
 
-      <!-- ----------FOOTER---------- -->
+      <!-- ----------FOOTER START---------- -->
 
       <div class="footer">
         <div class="footer_content">
@@ -239,10 +421,13 @@
       </div>
     </div>
 
-    <!-- <script
+    <!-- ----------FOOTER END---------- -->
+
+
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
   </body>
 </html>
