Revert "add package + shop"

--- a/Viet/packages.html
+++ b/Viet/packages.html
@@ -28,8 +28,8 @@
       </div>
       
       <div class="box-transparent p-3">
-        <div class="form-option row">
-          <div class="select-destination select-item col-lg-4 col-md-12">
+        <div class="form-option">
+          <div class="select-destination select-item">
             <p class="title-select mb-20">
               Select Your Destination :
             </p>
@@ -47,7 +47,7 @@
               <img src="img/icon-pin-grey.png" alt="">
             </div>
           </div>
-          <div class="select-date select-item col-lg-4 col-md-12">
+          <div class="select-date select-item">
             <p class="title-select mb-20">
               Select Your Date : 
             </p>
@@ -56,7 +56,7 @@
               <img src="img/icon-calendar-grey.png" alt="">
             </div>
           </div>
-          <div class="select-price select-item col-lg-4 col-md-12">
+          <div class="select-price select-item">
             <div class="d-flex justify-content-between">
               <p class="title-select mb-2">
                 Max Price :
