--- a/Chi/aboutus.html
+++ b/Chi/aboutus.html
@@ -7,9 +7,111 @@
     <title>About Us</title>
     <link rel="stylesheet" href="./style/aboutus.css">
     <link rel="stylesheet" href="./style/buy.css">
+    <link rel="stylesheet" href="../Thang/style/base.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="../Thang/images/icon.jpg" sizes="192x192"/></head>
 <body>
+    <!-- ----------HEADER START---------- -->
+    <div class="header">
+        <div class="header_nav">
+          <div class="header_content">
+            <img class="logo" src="./images/logo.png" alt="logo" />
+            <input type="checkbox" id="show-menu" />
+            <label for="show-menu" class="menu-icon"
+              ><i class="fas fa-bars"></i
+            ></label>
+            <label for="show-menu" class="nav_overlay"></label>
+            <ul class="links">
+              <li><a class="active" href="../Thang/index.html">HOME</a></li>
+              <li class="hover_sub1">
+                <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
+                <input type="checkbox" id="show-package" />
+                <label for="show-package">PACKAGE</label>
+                <ul class="sub_nav">
+                  <li class="trend">
+                    <a href="../Viet/packages.html">Search 1</a>
+                    <p class="sub1">Hot</p>
+                  </li>
+                  <li><a href="../Viet/packages.html">Search 2</a></li>
+                  <li class="hover_sub2">
+                    <a href="../Viet/packages.html" class="desktop-link"
+                      >Tour Package <i class="fas fa-caret-right"></i
+                    ></a>
+                    <input type="checkbox" id="show-items" />
+                    <label class="res_hv2" for="show-items">Tour Package</label>
+                    <ul class="sub_subnav">
+                      <li class="trend">
+                        <a href="../Viet/packages.html">Carousel</a>
+                        <p class="sub1 sub11">Best</p>
+                      </li>
+                      <li><a href="../Viet/packages.html">Custom Map</a></li>
+                      <li><a href="../Viet/packages.html">360° Panorama</a></li>
+                      <li><a href="../Viet/packages.html">Default</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="../Viet/packages.html">Destination</a></li>
+                  <li><a href="../Viet/packages.html">Typology</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="../Viet/shop.html" class="desktop-link">SHOP</a>
+                <input type="checkbox" id="show-shop" />
+                <label for="show-shop">SHOP</label>
+                <ul class="sub_nav">
+                  <li><a href="../Viet/shop.html">Archive</a></li>
+                  <li><a href="../Viet/shop.html">Single Product</a></li>
+                  <li><a href="../Viet/shop.html">Cart</a></li>
+                  <li><a href="../Viet/shop.html">Checkout</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="../Chi/aboutus.html" class="desktop-link">ABOUT US</a>
+                <input type="checkbox" id="show-about" />
+                <label for="show-about">ABOUT US</label>
+                <ul class="sub_nav">
+                  <li class="trend">
+                    <a href="../Chi/aboutus.html">About Us</a>
+                    <p class="sub1">New</p>
+                  </li>
+                  <li><a href="../Chi/aboutus.html">About Us 2</a></li>
+                  <li><a href="../Chi/aboutus.html">About Us 3</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="../Chi/news.html" class="desktop-link">NEWS</a>
+                <input type="checkbox" id="show-news" />
+                <label for="show-news">NEWS</label>
+                <ul class="sub_nav">
+                  <li><a href="../Chi/news.html">Archive</a></li>
+                  <li class="hover_sub2">
+                    <a href="../Chi/news.html" class="desktop-link"
+                      >Single Post <i class="fas fa-caret-right"></i
+                    ></a>
+                    <input type="checkbox" id="show-items2" />
+                    <label class="res_hv2" for="show-items2">Single Post</label>
+                    <ul class="sub_subnav">
+                      <li><a href="../Chi/news.html">Full Width</a></li>
+                      <li><a href="../Chi/news.html">Right Sidebar</a></li>
+                      <li><a href="../Chi/news.html">Left Sidebar</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="../Chi/contact.html" class="desktop-link">CONTACT</a>
+                <input type="checkbox" id="show-contact" />
+                <label for="show-contact">CONTACT</label>
+                <ul class="sub_nav">
+                  <li><a href="../Chi/contact.html">Contact 1</a></li>
+                  <li><a href="../Chi/contact.html">Contact 2</a></li>
+                </ul>
+              </li>
+            </ul>
+            <a class="booknow" href="#">Book Now</a>
+          </div>
+        </div>
+      </div>
+      <!-- ----------HEADER END---------- -->
     <!-- BANNER -->
     <div class="banner">
         <h1 class="banner-text">About Us</h1>
@@ -301,6 +403,113 @@
             </div>
         </div>
     </div>
+
+    <!-- ----------FOOTER START---------- -->
+
+    <div class="footer" style="width: 100%">
+        <div class="footer_content">
+          <div class="left">
+            <img src="./images/logo.png" alt="logo" />
+            <p class="text_footer">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+              ut diam et nibh <u>condimentum</u> venenatis eu ac magnasin.
+              Quisque interdum est mauris, eget ullamcorper.
+            </p>
+            <div class="social_icon">
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+              <a href="#"><i class="fa-brands fa-vimeo-v"></i></a>
+            </div>
+          </div>
+          <div class="item">
+            <h3 class="title_footer">OUR AGENCY</h3>
+            <div class="ele">
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Services</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Insurancee</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Agency</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Tourism</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Payment</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <h3 class="title_footer">PARTNERS</h3>
+            <div class="ele">
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Booking</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">RentalCar</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">HostelWorld</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Trivago</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">TripAdvisor</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <h3 class="title_footer">LAST MINUTE</h3>
+            <div class="ele">
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">London</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">California</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Indonesia</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Europe</a>
+              </div>
+              <div class="ele_child">
+                <i class="fa-solid fa-chevron-right"></i>
+                <a href="#">Oceania</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer_footer">
+          <div class="text_left">
+            <p>THE BEST WORDPRESS TRAVEL THEME</p>
+          </div>
+          <div class="text_right">
+            <p>COPYRIGHT NICDARK THEMES 2018</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ----------FOOTER END---------- -->
 
     <!-- FIXED -->
     <div class="buy">
