--- a/Chi/news.html
+++ b/Chi/news.html
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="header_nav">
           <div class="header_content">
-            <img class="logo" src="./images/logo.png" alt="logo" />
+            <img class="logo" src="../Thang/images/logo.png" alt="logo" />
             <input type="checkbox" id="show-menu" />
             <label for="show-menu" class="menu-icon"
               ><i class="fas fa-bars"></i
