add package + shop

--- a/Viet/packages.html
+++ b/Viet/packages.html
@@ -727,7 +727,7 @@
     </div>
   </div>
 
-  <div class="footer" style="width: 100%">
+  <div class="footer mt-5" style="width: 100%">
     <div class="footer_content">
       <div class="left">
         <img src="../Thang/images/logo.png" alt="logo" />
