--- a/Viet/shop.html
+++ b/Viet/shop.html
@@ -123,7 +123,7 @@
     
   </div>
 
-  <div class="footer" style="width: 100%">
+  <div class="footer mt-5" style="width: 100%">
     <div class="footer_content">
       <div class="left">
         <img src="../Thang/images/logo.png" alt="logo" />
