add package + shop

--- a/Viet/packages.html
+++ b/Viet/packages.html
@@ -15,6 +15,9 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
   <link rel="stylesheet" href="css/packages.css">
+
+  <link rel="stylesheet" href="../Chi/style/buy.css" />
+
   <link rel="stylesheet" href="../Thang/style/base.css">
   <link rel="icon" href="../Thang/images/icon.jpg" sizes="192x192"/></head>
   <title>Packages</title>
@@ -827,6 +830,19 @@
         <p>COPYRIGHT NICDARK THEMES 2018</p>
       </div>
     </div>
+  </div>
+
+  <div class="buy">
+    <span class="buynow">BUY NOW</span>
+    <a href="https://1.envato.market/PZ42q" target="_blank" class="circle">
+        <span class="up">$</span>
+        <span class="num text-center">54</span>
+    </a>
+  </div>
+  <div class="leaf">
+      <a href="https://1.envato.market/PZ42q" target="_blank" class="circle-leaf">
+          <img class="leaf-img" src="../Chi/images/leaf.png" style="width: 15px;">
+      </a>
   </div>
 
   <script src="js/package-cards.js"></script>
