--- a/Viet/shop.html
+++ b/Viet/shop.html
@@ -9,6 +9,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/shop.css">
 
+  <link rel="stylesheet" href="../Chi/style/buy.css" />
+
   <link rel="stylesheet" href="../Thang/style/base.css">
   <link rel="icon" href="../Thang/images/icon.jpg" sizes="192x192"/></head>
   <title>Products-City Tours</title>
@@ -223,6 +225,19 @@
         <p>COPYRIGHT NICDARK THEMES 2018</p>
       </div>
     </div>
+  </div>
+
+  <div class="buy">
+    <span class="buynow">BUY NOW</span>
+    <a href="https://1.envato.market/PZ42q" target="_blank" class="circle">
+        <span class="up">$</span>
+        <span class="num">54</span>
+    </a>
+  </div>
+  <div class="leaf">
+      <a href="https://1.envato.market/PZ42q" target="_blank" class="circle-leaf">
+          <img class="leaf-img" src="../Chi/images/leaf.png" style="width: 15px;">
+      </a>
   </div>
 
   <script src="js/shop-cards.js"></script>
