--- a/Chi/aboutus.html
+++ b/Chi/aboutus.html
@@ -15,18 +15,18 @@
     <div class="header">
         <div class="header_nav">
           <div class="header_content">
-            <img class="logo" src="../Thang/images/logo.png" alt="logo" />
+            <a href="../Thang/index.html"><img class="logo" src="../Thang/images/logo.png" alt="logo" /></a>
             <input type="checkbox" id="show-menu" />
             <label for="show-menu" class="menu-icon"
               ><i class="fas fa-bars"></i
             ></label>
             <label for="show-menu" class="nav_overlay"></label>
             <ul class="links">
-              <li><a class="active" href="../Thang/index.html">HOME</a></li>
+              <li><a href="../Thang/index.html">HOME</a></li>
               <li class="hover_sub1">
                 <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
                 <input type="checkbox" id="show-package" />
-                <label for="show-package">PACKAGE</label>
+                <label for="show-package">PACKAGES</label>
                 <ul class="sub_nav">
                   <li class="trend">
                     <a href="../Viet/packages.html">Search 1</a>
@@ -34,7 +34,7 @@
                   </li>
                   <li><a href="../Viet/packages.html">Search 2</a></li>
                   <li class="hover_sub2">
-                    <a href="../Viet/packages.html" class="desktop-link"
+                    <a class="desktop-link" href="../Viet/packages.html"
                       >Tour Package <i class="fas fa-caret-right"></i
                     ></a>
                     <input type="checkbox" id="show-items" />
@@ -54,7 +54,7 @@
                 </ul>
               </li>
               <li>
-                <a href="../Viet/shop.html" class="desktop-link">SHOP</a>
+                <a class="desktop-link" href="../Viet/shop.html">SHOP</a>
                 <input type="checkbox" id="show-shop" />
                 <label for="show-shop">SHOP</label>
                 <ul class="sub_nav">
@@ -65,7 +65,7 @@
                 </ul>
               </li>
               <li>
-                <a href="../Chi/aboutus.html" class="desktop-link">ABOUT US</a>
+                <a class="desktop-link active" href="../Chi/aboutus.html">ABOUT US</a>
                 <input type="checkbox" id="show-about" />
                 <label for="show-about">ABOUT US</label>
                 <ul class="sub_nav">
@@ -84,7 +84,7 @@
                 <ul class="sub_nav">
                   <li><a href="../Chi/news.html">Archive</a></li>
                   <li class="hover_sub2">
-                    <a href="../Chi/news.html" class="desktop-link"
+                    <a class="desktop-link" href="../Chi/news.html"
                       >Single Post <i class="fas fa-caret-right"></i
                     ></a>
                     <input type="checkbox" id="show-items2" />
@@ -98,7 +98,7 @@
                 </ul>
               </li>
               <li>
-                <a href="../Chi/contact.html" class="desktop-link">CONTACT</a>
+                <a class="desktop-link" href="../Chi/contact.html">CONTACT</a>
                 <input type="checkbox" id="show-contact" />
                 <label for="show-contact">CONTACT</label>
                 <ul class="sub_nav">
