--- a/Chi/news.html
+++ b/Chi/news.html
@@ -13,104 +13,104 @@
 <body>
     <!-- ----------HEADER START---------- -->
     <div class="header">
-        <div class="header_nav">
-          <div class="header_content">
-            <img class="logo" src="../Thang/images/logo.png" alt="logo" />
-            <input type="checkbox" id="show-menu" />
-            <label for="show-menu" class="menu-icon"
-              ><i class="fas fa-bars"></i
-            ></label>
-            <label for="show-menu" class="nav_overlay"></label>
-            <ul class="links">
-              <li><a class="active" href="../Thang/index.html">HOME</a></li>
-              <li class="hover_sub1">
-                <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
-                <input type="checkbox" id="show-package" />
-                <label for="show-package">PACKAGE</label>
-                <ul class="sub_nav">
-                  <li class="trend">
-                    <a href="../Viet/packages.html">Search 1</a>
-                    <p class="sub1">Hot</p>
-                  </li>
-                  <li><a href="../Viet/packages.html">Search 2</a></li>
-                  <li class="hover_sub2">
-                    <a href="../Viet/packages.html" class="desktop-link"
-                      >Tour Package <i class="fas fa-caret-right"></i
-                    ></a>
-                    <input type="checkbox" id="show-items" />
-                    <label class="res_hv2" for="show-items">Tour Package</label>
-                    <ul class="sub_subnav">
-                      <li class="trend">
-                        <a href="../Viet/packages.html">Carousel</a>
-                        <p class="sub1 sub11">Best</p>
-                      </li>
-                      <li><a href="../Viet/packages.html">Custom Map</a></li>
-                      <li><a href="../Viet/packages.html">360° Panorama</a></li>
-                      <li><a href="../Viet/packages.html">Default</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="../Viet/packages.html">Destination</a></li>
-                  <li><a href="../Viet/packages.html">Typology</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="../Viet/shop.html" class="desktop-link">SHOP</a>
-                <input type="checkbox" id="show-shop" />
-                <label for="show-shop">SHOP</label>
-                <ul class="sub_nav">
-                  <li><a href="../Viet/shop.html">Archive</a></li>
-                  <li><a href="../Viet/shop.html">Single Product</a></li>
-                  <li><a href="../Viet/shop.html">Cart</a></li>
-                  <li><a href="../Viet/shop.html">Checkout</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="../Chi/aboutus.html" class="desktop-link">ABOUT US</a>
-                <input type="checkbox" id="show-about" />
-                <label for="show-about">ABOUT US</label>
-                <ul class="sub_nav">
-                  <li class="trend">
-                    <a href="../Chi/aboutus.html">About Us</a>
-                    <p class="sub1">New</p>
-                  </li>
-                  <li><a href="../Chi/aboutus.html">About Us 2</a></li>
-                  <li><a href="../Chi/aboutus.html">About Us 3</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="../Chi/news.html" class="desktop-link">NEWS</a>
-                <input type="checkbox" id="show-news" />
-                <label for="show-news">NEWS</label>
-                <ul class="sub_nav">
-                  <li><a href="../Chi/news.html">Archive</a></li>
-                  <li class="hover_sub2">
-                    <a href="../Chi/news.html" class="desktop-link"
-                      >Single Post <i class="fas fa-caret-right"></i
-                    ></a>
-                    <input type="checkbox" id="show-items2" />
-                    <label class="res_hv2" for="show-items2">Single Post</label>
-                    <ul class="sub_subnav">
-                      <li><a href="../Chi/news.html">Full Width</a></li>
-                      <li><a href="../Chi/news.html">Right Sidebar</a></li>
-                      <li><a href="../Chi/news.html">Left Sidebar</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="../Chi/contact.html" class="desktop-link">CONTACT</a>
-                <input type="checkbox" id="show-contact" />
-                <label for="show-contact">CONTACT</label>
-                <ul class="sub_nav">
-                  <li><a href="../Chi/contact.html">Contact 1</a></li>
-                  <li><a href="../Chi/contact.html">Contact 2</a></li>
-                </ul>
-              </li>
-            </ul>
-            <a class="booknow" href="#">Book Now</a>
-          </div>
+      <div class="header_nav">
+        <div class="header_content">
+          <a href="../Thang/index.html"><img class="logo" src="../Thang/images/logo.png" alt="logo" /></a>
+          <input type="checkbox" id="show-menu" />
+          <label for="show-menu" class="menu-icon"
+            ><i class="fas fa-bars"></i
+          ></label>
+          <label for="show-menu" class="nav_overlay"></label>
+          <ul class="links">
+            <li><a href="../Thang/index.html">HOME</a></li>
+            <li class="hover_sub1">
+              <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
+              <input type="checkbox" id="show-package" />
+              <label for="show-package">PACKAGES</label>
+              <ul class="sub_nav">
+                <li class="trend">
+                  <a href="../Viet/packages.html">Search 1</a>
+                  <p class="sub1">Hot</p>
+                </li>
+                <li><a href="../Viet/packages.html">Search 2</a></li>
+                <li class="hover_sub2">
+                  <a class="desktop-link" href="../Viet/packages.html"
+                    >Tour Package <i class="fas fa-caret-right"></i
+                  ></a>
+                  <input type="checkbox" id="show-items" />
+                  <label class="res_hv2" for="show-items">Tour Package</label>
+                  <ul class="sub_subnav">
+                    <li class="trend">
+                      <a href="../Viet/packages.html">Carousel</a>
+                      <p class="sub1 sub11">Best</p>
+                    </li>
+                    <li><a href="../Viet/packages.html">Custom Map</a></li>
+                    <li><a href="../Viet/packages.html">360° Panorama</a></li>
+                    <li><a href="../Viet/packages.html">Default</a></li>
+                  </ul>
+                </li>
+                <li><a href="../Viet/packages.html">Destination</a></li>
+                <li><a href="../Viet/packages.html">Typology</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="desktop-link" href="../Viet/shop.html">SHOP</a>
+              <input type="checkbox" id="show-shop" />
+              <label for="show-shop">SHOP</label>
+              <ul class="sub_nav">
+                <li><a href="../Viet/shop.html">Archive</a></li>
+                <li><a href="../Viet/shop.html">Single Product</a></li>
+                <li><a href="../Viet/shop.html">Cart</a></li>
+                <li><a href="../Viet/shop.html">Checkout</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="desktop-link" href="../Chi/aboutus.html">ABOUT US</a>
+              <input type="checkbox" id="show-about" />
+              <label for="show-about">ABOUT US</label>
+              <ul class="sub_nav">
+                <li class="trend">
+                  <a href="../Chi/aboutus.html">About Us</a>
+                  <p class="sub1">New</p>
+                </li>
+                <li><a href="../Chi/aboutus.html">About Us 2</a></li>
+                <li><a href="../Chi/aboutus.html">About Us 3</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="active" href="../Chi/news.html" class="desktop-link">NEWS</a>
+              <input type="checkbox" id="show-news" />
+              <label for="show-news">NEWS</label>
+              <ul class="sub_nav">
+                <li><a href="../Chi/news.html">Archive</a></li>
+                <li class="hover_sub2">
+                  <a class="desktop-link" href="../Chi/news.html"
+                    >Single Post <i class="fas fa-caret-right"></i
+                  ></a>
+                  <input type="checkbox" id="show-items2" />
+                  <label class="res_hv2" for="show-items2">Single Post</label>
+                  <ul class="sub_subnav">
+                    <li><a href="../Chi/news.html">Full Width</a></li>
+                    <li><a href="../Chi/news.html">Right Sidebar</a></li>
+                    <li><a href="../Chi/news.html">Left Sidebar</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a class="desktop-link" href="../Chi/contact.html">CONTACT</a>
+              <input type="checkbox" id="show-contact" />
+              <label for="show-contact">CONTACT</label>
+              <ul class="sub_nav">
+                <li><a href="../Chi/contact.html">Contact 1</a></li>
+                <li><a href="../Chi/contact.html">Contact 2</a></li>
+              </ul>
+            </li>
+          </ul>
+          <a class="booknow" href="#">Book Now</a>
         </div>
       </div>
+    </div>
       <!-- ----------HEADER END---------- -->
     <!-- BANNER -->
     <div class="banner">
