--- a/Thang/index.html
+++ b/Thang/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <!-- <link rel="stylesheet" href="../Thang/style/base.css"> -->
+    <link rel="stylesheet" href="../Thang/style/base.css" />
     <link rel="stylesheet" href="../Thang/style/index.css" />
+    <link rel="stylesheet" href="../Chi/style/buy.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,11 +21,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="icon"
-      href="../Thang/images/icon.jpg"
-      sizes="192x192"
-    />
+    <link rel="icon" href="../Thang/images/icon.jpg" sizes="192x192" />
   </head>
   <body>
     <div class="container1">
@@ -32,7 +29,7 @@
       <div class="header">
         <div class="header_nav">
           <div class="header_content">
-            <img class="logo" src="./images/logo.png" alt="logo" />
+            <a href="../Thang/index.html"><img class="logo" src="../Thang/images/logo.png" alt="logo" /></a>
             <input type="checkbox" id="show-menu" />
             <label for="show-menu" class="menu-icon"
               ><i class="fas fa-bars"></i
@@ -43,7 +40,7 @@
               <li class="hover_sub1">
                 <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
                 <input type="checkbox" id="show-package" />
-                <label for="show-package">PACKAGE</label>
+                <label for="show-package">PACKAGES</label>
                 <ul class="sub_nav">
                   <li class="trend">
                     <a href="../Viet/packages.html">Search 1</a>
@@ -51,7 +48,7 @@
                   </li>
                   <li><a href="../Viet/packages.html">Search 2</a></li>
                   <li class="hover_sub2">
-                    <a href="../Viet/packages.html" class="desktop-link"
+                    <a class="desktop-link" href="../Viet/packages.html"
                       >Tour Package <i class="fas fa-caret-right"></i
                     ></a>
                     <input type="checkbox" id="show-items" />
@@ -71,7 +68,7 @@
                 </ul>
               </li>
               <li>
-                <a href="../Viet/shop.html" class="desktop-link">SHOP</a>
+                <a class="desktop-link" href="../Viet/shop.html">SHOP</a>
                 <input type="checkbox" id="show-shop" />
                 <label for="show-shop">SHOP</label>
                 <ul class="sub_nav">
@@ -82,7 +79,7 @@
                 </ul>
               </li>
               <li>
-                <a href="../Chi/aboutus.html" class="desktop-link">ABOUT US</a>
+                <a class="desktop-link" href="../Chi/aboutus.html">ABOUT US</a>
                 <input type="checkbox" id="show-about" />
                 <label for="show-about">ABOUT US</label>
                 <ul class="sub_nav">
@@ -101,7 +98,7 @@
                 <ul class="sub_nav">
                   <li><a href="../Chi/news.html">Archive</a></li>
                   <li class="hover_sub2">
-                    <a href="../Chi/news.html" class="desktop-link"
+                    <a class="desktop-link" href="../Chi/news.html"
                       >Single Post <i class="fas fa-caret-right"></i
                     ></a>
                     <input type="checkbox" id="show-items2" />
@@ -115,7 +112,7 @@
                 </ul>
               </li>
               <li>
-                <a href="../Chi/contact.html" class="desktop-link">CONTACT</a>
+                <a class="desktop-link" href="../Chi/contact.html">CONTACT</a>
                 <input type="checkbox" id="show-contact" />
                 <label for="show-contact">CONTACT</label>
                 <ul class="sub_nav">
@@ -181,13 +178,14 @@
         </div>
         <div class="slider_content">
           <div class="title_main">
-            <p class="title fly">Enjoy<span> Your </span>Holiday</p> <br>
+            <p class="title fly">Enjoy<span> Your </span>Holiday</p>
+            <br />
             <p class="title title_2 fly">With<span> Our </span>Agency</p>
           </div>
           <div class="list">
             <div class="list_item">
               <i class="fa-solid fa-star"></i>
-              <p>SPECTACULAR THINGS TO DO <br>BEST PLACES TO SEE</p>
+              <p>SPECTACULAR THINGS TO DO <br />BEST PLACES TO SEE</p>
             </div>
             <div class="list_item">
               <i class="fa-solid fa-star"></i>
@@ -195,13 +193,13 @@
             </div>
             <div class="list_item">
               <i class="fa-solid fa-star"></i>
-              <p>ALL INCLUSIVE FAMILY HOLIDAY<br>FOR ALL SEASON</p>
+              <p>ALL INCLUSIVE FAMILY HOLIDAY<br />FOR ALL SEASON</p>
             </div>
           </div>
-          <a href="#" class="buy">BUY THE TOUR
+          <a href="#" class="buy"
+            >BUY THE TOUR
             <p class="price">$25</p>
           </a>
-          
         </div>
       </div>
 
@@ -387,8 +385,8 @@
               </div>
               <div class="sale_more">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut
-                  efficitur ante. Donec dapibus dictum scelerisque.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  ut efficitur ante. Donec dapibus dictum scelerisque.
                 </p>
                 <a href="#" class="details">DETAILS</a>
               </div>
@@ -417,8 +415,8 @@
               </div>
               <div class="sale_more">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut
-                  efficitur ante. Donec dapibus dictum scelerisque.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  ut efficitur ante. Donec dapibus dictum scelerisque.
                 </p>
                 <a href="#" class="details details1">DETAILS</a>
               </div>
@@ -432,7 +430,7 @@
       <div class="footer" style="width: 100%">
         <div class="footer_content">
           <div class="left">
-            <img src="./images/logo.png" alt="logo" />
+            <img src="../Thang/images/logo.png" alt="logo" />
             <p class="text_footer">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
               ut diam et nibh <u>condimentum</u> venenatis eu ac magnasin.
@@ -533,7 +531,26 @@
     </div>
 
     <!-- ----------FOOTER END---------- -->
-
+    <div class="buy">
+      <span class="buynow">BUY NOW</span>
+      <a href="https://1.envato.market/PZ42q" target="_blank" class="circle">
+        <span class="up">$</span>
+        <span class="num">54</span>
+      </a>
+    </div>
+    <div class="leaf">
+      <a
+        href="https://1.envato.market/PZ42q"
+        target="_blank"
+        class="circle-leaf"
+      >
+        <img
+          class="leaf-img"
+          src="../Chi/images/leaf.png"
+          style="width: 15px"
+        />
+      </a>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
