--- a/Chi/news.html
+++ b/Chi/news.html
@@ -209,7 +209,7 @@
     <div class="footer" style="width: 100%">
         <div class="footer_content">
           <div class="left">
-            <img src="./images/logo.png" alt="logo" />
+            <img src="../Thang/images/logo.png" alt="logo" />
             <p class="text_footer">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
               ut diam et nibh <u>condimentum</u> venenatis eu ac magnasin.
