--- a/Thang/index.html
+++ b/Thang/index.html
@@ -29,7 +29,9 @@
       <div class="header">
         <div class="header_nav">
           <div class="header_content">
-            <a href="../Thang/index.html"><img class="logo" src="../Thang/images/logo.png" alt="logo" /></a>
+            <a href="../Thang/index.html"
+              ><img class="logo" src="../Thang/images/logo.png" alt="logo"
+            /></a>
             <input type="checkbox" id="show-menu" />
             <label for="show-menu" class="menu-icon"
               ><i class="fas fa-bars"></i
