--- a/Chi/aboutus.html
+++ b/Chi/aboutus.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="./style/aboutus.css">
     <link rel="stylesheet" href="./style/buy.css">
     <link rel="stylesheet" href="../Thang/style/base.css">
+    <link rel="stylesheet" href="./style/aboutus.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="../Thang/images/icon.jpg" sizes="192x192"/></head>
 <body>
@@ -15,18 +15,18 @@
     <div class="header">
         <div class="header_nav">
           <div class="header_content">
-            <a href="../Thang/index.html"><img class="logo" src="../Thang/images/logo.png" alt="logo" /></a>
+            <img class="logo" src="../Thang/images/logo.png" alt="logo" />
             <input type="checkbox" id="show-menu" />
             <label for="show-menu" class="menu-icon"
               ><i class="fas fa-bars"></i
             ></label>
             <label for="show-menu" class="nav_overlay"></label>
             <ul class="links">
-              <li><a href="../Thang/index.html">HOME</a></li>
+              <li><a class="active" href="../Thang/index.html">HOME</a></li>
               <li class="hover_sub1">
                 <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
                 <input type="checkbox" id="show-package" />
-                <label for="show-package">PACKAGES</label>
+                <label for="show-package">PACKAGE</label>
                 <ul class="sub_nav">
                   <li class="trend">
                     <a href="../Viet/packages.html">Search 1</a>
@@ -34,7 +34,7 @@
                   </li>
                   <li><a href="../Viet/packages.html">Search 2</a></li>
                   <li class="hover_sub2">
-                    <a class="desktop-link" href="../Viet/packages.html"
+                    <a href="../Viet/packages.html" class="desktop-link"
                       >Tour Package <i class="fas fa-caret-right"></i
                     ></a>
                     <input type="checkbox" id="show-items" />
@@ -54,7 +54,7 @@
                 </ul>
               </li>
               <li>
-                <a class="desktop-link" href="../Viet/shop.html">SHOP</a>
+                <a href="../Viet/shop.html" class="desktop-link">SHOP</a>
                 <input type="checkbox" id="show-shop" />
                 <label for="show-shop">SHOP</label>
                 <ul class="sub_nav">
@@ -65,7 +65,7 @@
                 </ul>
               </li>
               <li>
-                <a class="desktop-link active" href="../Chi/aboutus.html">ABOUT US</a>
+                <a href="../Chi/aboutus.html" class="desktop-link">ABOUT US</a>
                 <input type="checkbox" id="show-about" />
                 <label for="show-about">ABOUT US</label>
                 <ul class="sub_nav">
@@ -84,7 +84,7 @@
                 <ul class="sub_nav">
                   <li><a href="../Chi/news.html">Archive</a></li>
                   <li class="hover_sub2">
-                    <a class="desktop-link" href="../Chi/news.html"
+                    <a href="../Chi/news.html" class="desktop-link"
                       >Single Post <i class="fas fa-caret-right"></i
                     ></a>
                     <input type="checkbox" id="show-items2" />
@@ -98,7 +98,7 @@
                 </ul>
               </li>
               <li>
-                <a class="desktop-link" href="../Chi/contact.html">CONTACT</a>
+                <a href="../Chi/contact.html" class="desktop-link">CONTACT</a>
                 <input type="checkbox" id="show-contact" />
                 <label for="show-contact">CONTACT</label>
                 <ul class="sub_nav">
@@ -158,54 +158,53 @@
             </p>
             <a class="banner-staff-text-btn" href="#">CONTACT US</a>
         </div>
-        <div class="staff">
-            <div class="staff-info">
-                <img src="./images/staff-1.jpeg" alt="" class="staff-img">
-                <div class="staff-info-detail">
-                    <h2 class="staff-name"><strong>Jane Mcallister</strong></h2>
-                    <h6 class="staff-pos">OWNER</h6>
-                    <p class="staff-quote">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
-                    </p>
-                    <a href="#" class="staff-contact">CONTACT ME</a>
-                </div>
+    </div>
+    <div class="staff">
+        <div class="staff-info">
+            <img src="./images/staff-1.jpeg" alt="" class="staff-img">
+            <div class="staff-info-detail">
+                <h2 class="staff-name"><strong>Jane Mcallister</strong></h2>
+                <h6 class="staff-pos">OWNER</h6>
+                <p class="staff-quote">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
+                </p>
+                <a href="#" class="staff-contact">CONTACT ME</a>
             </div>
-            <div class="staff-info">
-                <img src="./images/staff-2.jpeg" alt="" class="staff-img">
-                <div class="staff-info-detail">
-                    <h2 class="staff-name"><strong>Mandy Johnson</strong></h2>
-                    <h6 class="staff-pos">CUSTOMER CARE</h6>
-                    <p class="staff-quote">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
-                    </p>
-                    <a href="#" class="staff-contact">CONTACT ME</a>
-                </div>
-            </div>        
-            <div class="staff-info">
-                <img src="./images/staff-3.jpeg" alt="" class="staff-img">
-                <div class="staff-info-detail">
-                    <h2 class="staff-name"><strong>Elly Spitch</strong></h2>
-                    <h6 class="staff-pos">CO-FOUNDER</h6>
-                    <p class="staff-quote">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
-                    </p>
-                    <a href="#" class="staff-contact">CONTACT ME</a>
-                </div>
-            </div>  
-            <div class="staff-info">
-                <img src="./images/staff-4.jpeg" alt="" class="staff-img">
-                <div class="staff-info-detail">
-                    <h2 class="staff-name"><strong>Hanna Zafron</strong></h2>
-                    <h6 class="staff-pos">SPECIALIST</h6>
-                    <p class="staff-quote">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
-                    </p>
-                    <a href="#" class="staff-contact">CONTACT ME</a>
-                </div>
+        </div>
+        <div class="staff-info">
+            <img src="./images/staff-2.jpeg" alt="" class="staff-img">
+            <div class="staff-info-detail">
+                <h2 class="staff-name"><strong>Mandy Johnson</strong></h2>
+                <h6 class="staff-pos">CUSTOMER CARE</h6>
+                <p class="staff-quote">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
+                </p>
+                <a href="#" class="staff-contact">CONTACT ME</a>
+            </div>
+        </div>        
+        <div class="staff-info">
+            <img src="./images/staff-3.jpeg" alt="" class="staff-img">
+            <div class="staff-info-detail">
+                <h2 class="staff-name"><strong>Elly Spitch</strong></h2>
+                <h6 class="staff-pos">CO-FOUNDER</h6>
+                <p class="staff-quote">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
+                </p>
+                <a href="#" class="staff-contact">CONTACT ME</a>
+            </div>
+        </div>  
+        <div class="staff-info">
+            <img src="./images/staff-4.jpeg" alt="" class="staff-img">
+            <div class="staff-info-detail">
+                <h2 class="staff-name"><strong>Hanna Zafron</strong></h2>
+                <h6 class="staff-pos">SPECIALIST</h6>
+                <p class="staff-quote">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas magna at portitor.
+                </p>
+                <a href="#" class="staff-contact">CONTACT ME</a>
             </div>
         </div>
     </div>
-
     <!-- DESTINATIONS -->
     <div class="destinations">
         <div class="des-header">
