--- a/Chi/contact.html
+++ b/Chi/contact.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="./style/contact.css" />
     <link rel="stylesheet" href="./style/buy.css" />
     <link rel="stylesheet" href="../Thang/style/base.css" />
+    <link rel="stylesheet" href="./style/contact.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap"
       rel="stylesheet"
@@ -19,18 +19,18 @@
     <div class="header">
       <div class="header_nav">
         <div class="header_content">
-          <a href="../Thang/index.html"><img class="logo" src="../Thang/images/logo.png" alt="logo" /></a>
+          <img class="logo" src="../Thang/images/logo.png" alt="logo" />
           <input type="checkbox" id="show-menu" />
           <label for="show-menu" class="menu-icon"
             ><i class="fas fa-bars"></i
           ></label>
           <label for="show-menu" class="nav_overlay"></label>
           <ul class="links">
-            <li><a href="../Thang/index.html">HOME</a></li>
+            <li><a class="active" href="../Thang/index.html">HOME</a></li>
             <li class="hover_sub1">
               <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
               <input type="checkbox" id="show-package" />
-              <label for="show-package">PACKAGES</label>
+              <label for="show-package">PACKAGE</label>
               <ul class="sub_nav">
                 <li class="trend">
                   <a href="../Viet/packages.html">Search 1</a>
@@ -38,7 +38,7 @@
                 </li>
                 <li><a href="../Viet/packages.html">Search 2</a></li>
                 <li class="hover_sub2">
-                  <a class="desktop-link" href="../Viet/packages.html"
+                  <a href="../Viet/packages.html" class="desktop-link"
                     >Tour Package <i class="fas fa-caret-right"></i
                   ></a>
                   <input type="checkbox" id="show-items" />
@@ -58,7 +58,7 @@
               </ul>
             </li>
             <li>
-              <a class="desktop-link" href="../Viet/shop.html">SHOP</a>
+              <a href="../Viet/shop.html" class="desktop-link">SHOP</a>
               <input type="checkbox" id="show-shop" />
               <label for="show-shop">SHOP</label>
               <ul class="sub_nav">
@@ -69,7 +69,7 @@
               </ul>
             </li>
             <li>
-              <a class="desktop-link" href="../Chi/aboutus.html">ABOUT US</a>
+              <a href="../Chi/aboutus.html" class="desktop-link">ABOUT US</a>
               <input type="checkbox" id="show-about" />
               <label for="show-about">ABOUT US</label>
               <ul class="sub_nav">
@@ -88,7 +88,7 @@
               <ul class="sub_nav">
                 <li><a href="../Chi/news.html">Archive</a></li>
                 <li class="hover_sub2">
-                  <a class="desktop-link" href="../Chi/news.html"
+                  <a href="../Chi/news.html" class="desktop-link"
                     >Single Post <i class="fas fa-caret-right"></i
                   ></a>
                   <input type="checkbox" id="show-items2" />
@@ -102,7 +102,7 @@
               </ul>
             </li>
             <li>
-              <a class="desktop-link active" href="../Chi/contact.html">CONTACT</a>
+              <a href="../Chi/contact.html" class="desktop-link">CONTACT</a>
               <input type="checkbox" id="show-contact" />
               <label for="show-contact">CONTACT</label>
               <ul class="sub_nav">
